syntax = "proto3";

option go_package = "gateway/protoutil";

package common;

message Orderer {
  string url = 1;
  string host_name = 2;
  bytes tls_root_cert = 3;
}

message Peer {
  string url = 1;
  string host_name = 2;
  bytes tls_root_cert = 3;
}

// 组织
message Organization {
  enum Type {
    PEER = 0;
    ORDERER = 1;
  }
  string name = 1;
  string msp_id = 2;
  Type type = 3;
  bytes  root_cert = 4;
  bytes tls_root_cert = 5;
}

// 签名
message Signer {
  string msp_id = 1;
  bytes cert = 2;
  bytes key = 3;
}

message Response {
  int32  status = 1;
  string message = 2;
  bytes payload = 3;
}
